# dock_log

./: CMakeLists.txt  Dockerfile  README.md
src/: logger.hpp  main.cpp
